force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Terms</relationshipLabel>
    <relationshipName>Quote_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>