force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Terms</relationshipLabel>
    <relationshipName>Quote_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>