force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/Replacement_Fields__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Fields__c</fullName>
    <label>Replacement Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>