force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <label>Service Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN10</fullName>
                <label>Yotta Data Services Private Limited</label>
            </value>
            <value>
                <fullName>IN20</fullName>
                <label>Yotta Network Services Private Limited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>