force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>About Yotta Brief</fullName>
            </value>
            <value>
                <fullName>Products and Services</fullName>
            </value>
            <value>
                <fullName>Certifications</fullName>
            </value>
            <value>
                <fullName>Customers</fullName>
            </value>
            <value>
                <fullName>About Yotta Detailed</fullName>
            </value>
            <value>
                <fullName>Colocation</fullName>
            </value>
            <value>
                <fullName>Network &amp; Connectivity</fullName>
            </value>
            <value>
                <fullName>Yotta Cloud</fullName>
            </value>
            <value>
                <fullName>Traded Goods</fullName>
            </value>
            <value>
                <fullName>Private Cloud</fullName>
            </value>
            <value>
                <fullName>Federated Cloud</fullName>
            </value>
            <value>
                <fullName>IT Management</fullName>
            </value>
            <value>
                <fullName>Security Services</fullName>
            </value>
            <value>
                <fullName>Yotta Smart Solutions</fullName>
            </value>
            <value>
                <fullName>Power Utility Charges</fullName>
            </value>
            <value>
                <fullName>Temporary Storage in Service Provider Stores / Staging Area</fullName>
            </value>
            <value>
                <fullName>Migration Services and Charges</fullName>
            </value>
            <value>
                <fullName>Internet Bandwidth usage / usage-based Billing</fullName>
            </value>
            <value>
                <fullName>Inframanage/Inframonitor Services</fullName>
            </value>
            <value>
                <fullName>Third Party Cloud Services</fullName>
            </value>
            <value>
                <fullName>Equipment Sales</fullName>
            </value>
            <value>
                <fullName>No transfer of Equipment Ownership</fullName>
            </value>
            <value>
                <fullName>Pre-scheduled Tests / Activities related Services</fullName>
            </value>
            <value>
                <fullName>End User License Term</fullName>
            </value>
            <value>
                <fullName>General Term</fullName>
            </value>
            <value>
                <fullName>Cancellation Term</fullName>
            </value>
            <value>
                <fullName>Termination Term</fullName>
            </value>
            <value>
                <fullName>Intra and Inter Rack Cabling</fullName>
            </value>
            <value>
                <fullName>Fitout Material/Services</fullName>
            </value>
            <value>
                <fullName>IT Management Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>