force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/Term_Condition_Description__c.field-meta.xml
<CustomField>
    <fullName>Term_Condition_Description__c</fullName>
    <label>Term &amp; Condition Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>