force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/Term_Description__c.field-meta.xml
<CustomField>
    <fullName>Term_Description__c</fullName>
    <label>Term Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>