force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Terms</fullName>
            </value>
            <value>
                <fullName>Cancellation Terms</fullName>
            </value>
            <value>
                <fullName>Termination Terms</fullName>
            </value>
            <value>
                <fullName>Product Terms</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Annexure</fullName>
            </value>
            <value>
                <fullName>Payment Terms</fullName>
            </value>
            <value>
                <fullName>POC Terms</fullName>
            </value>
            <value>
                <fullName>Deactivation Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>