force-app/main/default/objects/SBQQ__QuoteTerm__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
    <fullName>SBQQ__All</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__PrintOrder__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Term_Name__c</columns>
    <columns>SBQQ__Active__c</columns>
    <columns>Service_Provider__c</columns>
    <columns>Term_Condition_Description__c</columns>
    <columns>Term_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>General Terms</value>
    </filters>
    <label>All</label>
</ListView>